<resources>
    <string name="app_name">App Love</string>
    <string name="save_date">Save date success</string>
    <string name="love_test">Love Test</string>
    <string name="save_person">Save person success!</string>
    <string name="save_person_fail">Save person fail!</string>
    <string name="start_date">Start Date</string>
    <string name="please_choose_language">Please choose a language</string>
    <string name="permission_camera">You need permission to open the camera!</string>
    <string name="permission_continue">You need permission to continue!</string>
    <string name="title_intro1">Test Your Relationship</string>
    <string name="description_intro1">Find out your love compatibility\n with your partner</string>
    <string name="title_intro2">Love Day Counter</string>
    <string name="description_intro2">Keep track of how long you \n have been together</string>
    <string name="title_intro3">Memorable Moments</string>
    <string name="description_intro3">Preserve cherished moments together</string>
    <string name="coming_soon">Coming soon ! </string>
    <string name="ads_not_ready">Ads not ready, please try again later!</string>
    <string name="unlock">Unlock feature</string>
    <string name="unlock_desc">You need to watch a video to unlock this feature!</string>
    <string name="cancel">Cancel</string>
    <string name="watch_video">Watch Video</string>
    <string name="horoscope_test">Horoscope Test</string>
    <string name="horoscope">Horoscope</string>
    <string name="result_gemini">result from gemini</string>
    <string name="language">Language</string>
    <string name="home">Home</string>
    <string name="memory">Memory</string>
    <string name="next">Next</string>
    <string name="permission">Permission</string>
    <string name="permission_desc">This app needs permissions below to work properly</string>
    <string name="permission_allow">Allow access</string>
    <string name="btn_continue">Continute</string>
    <string name="setting">Setting</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="policy">Privacy Policy</string>
    <string name="date_of_love">Date of love</string>
    <string name="save">Save</string>
    <string name="choose_avatar">Choose your avatar</string>
    <string name="select_option">Select option</string>
    <string name="take_camera">Take a photo</string>
    <string name="upload_photo">Upload photo</string>
    <string name="information">Information</string>
    <string name="default_avatar">Default Avatar</string>
    <string name="tap_to_change">Tap to change photo</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="tap_to_start_date">Tap to start date</string>
    <string name="name_test">Name Test</string>
    <string name="name_test_desc">Discover your compatibility by entering your name</string>
    <string name="horoscope_test_desc">Try a cute zodiac compatibility test with your crush</string>
    <string name="no_memory">No anniversary</string>
    <string name="no_memory_desc">Preserve your unforgettable anniversary here!</string>
    <string name="Your_opinion_matter_to_us">Do you like this app?</string>
    <string name="may_be_later">Not now</string>
    <string name="please_give_rating">please give me a rating!</string>
    <string name="There_is_no_email">There is no email client installed.</string>

</resources>