<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.LoveTestFragment"
    android:padding="20dp">

    <TextView
        android:id="@+id/txtLoveTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/love_test"
        android:textSize="20sp"
        android:fontFamily="@font/plusjakartasans"
        android:textColor="#1E232E"
        android:textFontWeight="600"
        android:layout_marginTop="25dp"/>


    <RelativeLayout
        android:id="@+id/rlNametest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="79dp"
        android:background="@drawable/bg_gray"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plusjakartasans"
            android:text="@string/name_test"
            android:textColor="#1E232E"
            android:textFontWeight="600"
            android:textSize="20sp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/plusjakartasans"
            android:text="@string/name_test_desc"
            android:textColor="#4B4F58"
            android:textFontWeight="400"
            android:textSize="12sp" />
        
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_nametest"
            android:layout_marginLeft="242dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlHoroscope"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:background="@drawable/bg_gray"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plusjakartasans"
            android:text="@string/horoscope_test"
            android:textColor="#1E232E"
            android:textFontWeight="600"
            android:textSize="20sp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/plusjakartasans"
            android:text="@string/horoscope_test_desc"
            android:textColor="#4B4F58"
            android:textFontWeight="400"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imghoroscope"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_horoscope"
            android:layout_marginLeft="242dp"/>

    </RelativeLayout>


</FrameLayout>