<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPage2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/llHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivHome"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_home" />

            <TextView
                android:id="@+id/txtHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakartasans"
                android:text="@string/home"
                android:textColor="#4B4F58"
                android:textFontWeight="600"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLoveTest"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivLoveTest"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_heart1" />

            <TextView
                android:id="@+id/txtLoveTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakartasans"
                android:text="@string/love_test"
                android:textColor="#4B4F58"
                android:textFontWeight="600"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMemory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivMemory"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_memory" />

            <TextView
                android:id="@+id/txtMemory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakartasans"
                android:text="@string/memory"
                android:textColor="#4B4F58"
                android:textFontWeight="600"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

    <!--        <androidx.fragment.app.FragmentContainerView-->
    <!--            android:id="@+id/adFragmentContainer"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="bottom"/>-->

    <include
        android:id="@+id/include"
        layout="@layout/layout_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>